--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 services:
+
+
+# MQTT Broker
   mosquitto:
     image: eclipse-mosquitto:latest
     container_name: mosquitto_broker
@@ -12,7 +15,23 @@ services:
       ppe_network:
         ipv4_address: 192.168.100.101  # Static IP for MQTT Broker
 
+# Database 
+  db-service:
+    build: ./database
+    container_name: db-service 
+    volumes:
+      - ./data-volume:/data
+    environment:
+      - DB_PATH=/data/edge_devices.db
+    command: sh -c "python /app/main.py && tail -f /dev/null"
+    restart: unless-stopped
+    networks:
+      ppe_network:
+        ipv4_address: 192.168.100.102  # Adjusted subnet if necessary
 
+
+
+# Edge Device
   edge_device:
     build: ./edge_device
     container_name: edge_device
@@ -21,7 +40,9 @@ services:
     restart: always  # Recommended for resiliency
     networks:
       ppe_network:
-        ipv4_address: 192.168.100.102  # Adjusted subnet if necessary
+        ipv4_address: 192.168.100.103  # Adjusted subnet if necessary
+
+
 
 
 networks:
