Migrate DB to PostgreSQL

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,28 +1,13 @@
-# Use a Python base image
-FROM python:3.11-slim
-
-# Set working directory
-WORKDIR /app
-
-# Install sqlite3 and other dependencies
-RUN apt-get update && \
-    apt-get install -y sqlite3 && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Copy the database manager script
-COPY main.py /app/
-RUN chmod +x /app/main.py
-
-# Create a directory for the database
-RUN mkdir -p /data
+# Use the official PostgreSQL image as the base
+FROM postgres:latest
 
 # Set environment variables
-ENV DB_PATH=/data/edge_devices.db
-ENV PYTHONUNBUFFERED=1
+ENV POSTGRES_USER=postgres
+ENV POSTGRES_PASSWORD=postgres
+ENV POSTGRES_DB=edgedevicedb
 
-# Volume for persistent storage
-VOLUME ["/data"]
+# Copy the initialization SQL script
+COPY schema.sql /docker-entrypoint-initdb.d/
 
-# Run the database manager script when the container starts
-CMD ["python", "/app/main.py"]
+# Expose the PostgreSQL port
+EXPOSE 5432
