Add model inference and publish

--- a/edge_device/Dockerfile
+++ b/edge_device/Dockerfile
@@ -1,6 +1,21 @@
+# Use a minimal Python image
 FROM python:3.10-slim
+
+# Set working directory
 WORKDIR /app
+
+# Install system dependencies required by OpenCV
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*  # Cleanup
+
+# Copy and install Python dependencies
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application files
 COPY . .
+
+# Command to run the application
 CMD ["python", "main.py"]
