--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,17 +31,16 @@ services:
 
 
 
-# Edge Device
-  edge_device:
-    build: ./edge_device
-    container_name: edge_device
-    depends_on:
-      - mosquitto
-    restart: always  # Recommended for resiliency
-    networks:
-      ppe_network:
-        ipv4_address: 192.168.100.103  # Adjusted subnet if necessary
-
+# # Edge Device
+#   edge_device:
+#     build: ./edge_device
+#     container_name: edge_device
+#     depends_on:
+#       - mosquitto
+#     restart: always
+#     networks:
+#       ppe_network:
+#         ipv4_address: 192.168.100.103
 
 
 
