--- a/mosquitto/mosquitto_config/mosquitto.conf
+++ b/mosquitto/mosquitto_config/mosquitto.conf
@@ -1,6 +1,7 @@
 # Listeners
 listener 1883
-
+listener 9001
+protocol websockets
 # Allow anonymous connections (set to false for production)
 allow_anonymous true
 
