--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,9 @@ services:
 #       ppe_network:
 #         ipv4_address: 192.168.100.103
 
-
+volumes:
+  postgres_data:
+    name: edgedevice_postgres_data
 
 networks:
   ppe_network:
