--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,8 @@ services:
   # Flask application
   backend-service:
     build: ./backend
-    ports:
-      - "5000:5000"
+    # ports:
+    #   - "5000:5000"
     environment:
       - FLASK_ENV=development
       - DB_USER=postgres
